--- a/src/app/shared/ui/notifications/notifications.component.scss
+++ b/src/app/shared/ui/notifications/notifications.component.scss
@@ -55,12 +55,12 @@ button.active > .badge {
 
 .notify__expander {
   position: absolute;
-  top: -1px;
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: palette(blue);
   z-index: 9;
   opacity: 1;
-  transform: scale(1, 1);
+  transform: scale(1);
 }
